      po/en_GB.po, po/es.po, po/fi.po, po/fr.po, po/he.po, po/hu.po, po/it.po,
      po/nb.po, po/nl.po, po/pt_BR.po, po/pt.po, po/sk.po, po/sl.po, po/sv.po,
      po/zh_CN.po, po/zh_TW.po (new, LP: #868195)
    - thanks to all contributors: https://translations.launchpad.net/ufw
  * README.translations: updated for paths and testing
  * add 'show added' report (LP: #987784)

 -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 11 Aug 2012 21:47:48 -0500

ufw (0.32) RELEASED; urgency=low

  * Obsolete python2.5 in preparation for python3 support
  * Adjust gettext initialization so that _() always returns unicode. Patch
    thanks to Barry Warsaw
  * Add python3 support (LP: #1001657)
  * profiles/ufw-directoryserver: use LDAPS key for LDAPS

 -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 19 May 2012 08:48:15 -0500

ufw (0.31.1) RELEASED; urgency=low

  * src/util.py: revert revert r752 which introduced problems with other
    locales (LP: #953372)
  * add tests/check-locales. This is Debian/Ubuntu specific, but will help
    avoid commits like r752.

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 12 Mar 2012 20:26:28 -0500

ufw (0.31) RELEASED; urgency=low

  * allow UPnP multicast for service discovery (LP: #764933)
  * conf/ufw.defaults:
    - remove IRC connection tracking, which is only required for DCC
    - allow nf_conntrack_netbios_ns (Samba) (LP: #360975)
  * enable IPv6 by default
  * fix 'allow to any ipv6' when IPv6 is enabled
  * update manpage references to ufw and ufw-framework to include the section
  * update check-requirements to prompt to continue with tests that may
    autoload modules. Add '-f' option to check-requirements and update test
    suite accordingly (LP: #782816)
  * don't fail when running 'show listening' under fakeroot (LP: #812516)
  * add syntax-check to Makefile
  * add man-check to Makefile
  * src/util.py: use codes.open(..., 'UTF-8') to better support non-english