@@ -14,6 +14,7 @@ ufw (0.33) UNRELEASED; urgency=low
     - thanks to all contributors: https://translations.launchpad.net/ufw
   * README.translations: updated for paths and testing
   * add 'show added' report (LP: #987784)
+  * remove ACCEPT_NO_TRACK option since it never worked (LP: #787955)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Sat, 11 Aug 2012 21:47:48 -0500
 
